--- a/CSS/SkywindStyles.css
+++ b/CSS/SkywindStyles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Magic_Cards";
-    src: url(./Magic_Cards/MAGIC_CA.ttf) format('truetype');
+    src: url(../Magic_Cards/MAGIC_CA.ttf) format('truetype');
 }
 
 
