--- a/CSS/SkywindStyles.css
+++ b/CSS/SkywindStyles.css
@@ -76,9 +76,9 @@ ul li {
     width: 100%;
     height: 1080px;
     grid-template-areas: 
-     "c c c c"
-     "n b b g";
-    grid-template-columns: 1fr 1fr 1fr 3fr;
+     "c c c"
+     "n b g";
+    grid-template-columns: 1fr 2fr 3fr;
     grid-template-rows: 90px 1fr;
 }
 
